<resources>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="add">Add</string>
    <string name="close">Close</string>
    <string name="help">Help</string>
    <string name="content">Content</string>
    <string name="description">Description</string>
    <string name="identification">Your identification</string>
    <string name="polls">Votes</string>
    <string name="question">Question</string>
    <string name="options">Options</string>
    <string name="participants">Participants</string>
    <string name="vote_singular">ballot</string>
    <string name="vote_plural">ballots</string>
    <string name="empty_vote">Blank vote</string>
    <string name="join">Join</string>
    <string name="notification">A vote is currently running. Tap to bring to front.</string>
    <string name="poll_archive">Vote archive</string>
    <string name="cast_votes">Cast ballots: %1$d of %2$d</string>
    <string name="poll_start_time">Start date</string>
    <string name="number_voters">Eligible voters</string>
    <string name="number_cast_votes">Cast ballots</string>
    <string name="participation">Participation</string>
    <string name="result_chart">Result chart</string>
    <string name="archived_votes">Archived votes</string>
    <string name="no_archived_votes">There are currently no archived votes</string>
    <string name="no_votes">There are currently no votes</string>
    <string name="no_options">There are currently no options</string>
    <string name="allow_empty_vote">Allow blank ballots</string>
    <string name="network_name">Network name</string>
    <string name="network_info">Network information</string>
    <string name="network_wlan_key">Wi-Fi Key</string>
    <string name="not_connected">No network set up</string>
    <string name="networks">Network connection for voting</string>
    <string name="dialog_wait_wifi">Please wait&#8230;</string>
    <string name="button_use_actual_ssid">Use network \"%1$s\"</string>
    <string name="advance_network_config">Advanced network configuration</string>
    <string name="button_scan_nfc">Scan NFC tag</string>
    <string name="write_nfc_tag">Write NFC tag</string>
    <string name="put_nfc">Put a NFC tag in proximity of your device&#8230;</string>
    <string name="create_new_network">Use Android hotspot</string>
    <string name="capture_qrcode">Scan QR-code</string>
    <string name="join_network">Join electorate</string>
    <string name="group_password_desc">Group password</string>
    <string name="group_name_desc">Group number</string>
    <string name="recreate_network">Modify</string>
    <string name="join_group_title">Join group</string>
    <string name="wpa_secure">WPA secured network</string>
    <string name="wep_secure">WEP secured network</string>
    <string name="unsecure">Unsecure open network</string>
    <string name="no_group_available">No groups available</string>
    <string name="action_redo_poll">Repeat vote</string>
    <string name="action_clone_poll">Clone vote</string>
    <string name="action_create_poll">Create new vote</string>
    <string name="action_start_poll">Start vote</string>
    <string name="action_next">Next</string>
    <string name="action_stop_poll">Finish vote</string>
    <string name="action_cancel_poll">Cancel vote</string>
    <string name="action_start_poll_period">Start voting period</string>
    <string name="action_export">Export</string>
    <string name="dialog_title_confirm_vote">Cast ballot?</string>
    <string name="dialog_confirm_vote">
<![CDATA[
			You have selected the following option:<br /><br /><b>%1$s</b><br /><br />Do you want to confirm your choice and cast your ballot?
		]]>
    </string>
    <string name="dialog_title_save_poll">Save vote?</string>
    <string name="dialog_save_poll">Do you want to save the modifications done on this vote?</string>
    <string name="dialog_title_stop_poll">Finish vote?</string>
    <string name="dialog_stop_poll">Some participants have not cast their ballot yet. Do you really want to end the voting period?</string>
    <string name="dialog_title_cancel_poll">Cancel vote?</string>
    <string name="dialog_cancel_poll">Do you really want to cancel the vote?</string>
    <string name="dialog_title_add_option">Add option in edition?</string>
    <string name="dialog_add_option">You still have an option in edition. Do you want to add it to the vote?</string>
    <string name="dialog_title_back">Quit?</string>
    <string name="dialog_back">By going back, you will not be able to participate to the vote. Do you really want that?</string>
    <string name="dialog_back_admin">By going back, you will not be able to administrate the vote. You will have to restart the procedure from the beginning. Do you really want that?</string>
    <string name="dialog_back_result">By going back, you will not be able to see the result of the vote. Do you really want that?</string>
    <string name="dialog_title_access_point">Android Wi-Fi hotspot</string>
    <string name="dialog_content_access_point">The Android Wi-Fi hotspot is already enabled. Do you want to use this connection?</string>
    <string name="nfc_enable_nfc">Enable NFC?</string>
    <string name="nfc_enable_nfc_question">In order to use this feature, NFC must be enabled. Do you want to enable it now?</string>
    <string name="toast_scroll">Please have a look at all options first.</string>
    <string name="toast_choose_one_option">Please choose one of the possible options.</string>
    <string name="toast_join_error_admin">A group with the same name already exists. Please choose another name.</string>
    <string name="toast_join_error_voter">No group with the given name exists. Please wait for the administrator to create the group.</string>
    <string name="toast_join_error_invalid_name">Invalid group name. Please choose another name.</string>
    <string name="toast_join_error">Error creating/joining the group.</string>
    <string name="toast_join_error_voter_network">Error joining the group. It seems there is a problem with your network card. Please try to disable the Wi-Fi and enable it again.</string>
    <string name="toast_join_error_no_groups">No groups found on the network. Please make sure that the administrator already created a group, and make sure the network supports Multicast messages.</string>
    <string name="toast_network_connection_error">Failed to connect to Wi-Fi network.</string>
    <string name="toast_redo_impossible">An error occurred while trying to restart the vote.</string>
    <string name="toast_wifi_is_not_connected">You are currently not connected to a Wi-Fi network. Please choose another option.</string>
    <string name="toast_wifi_is_disabled">Wi-Fi is currently disabled. Please enable it first.</string>
    <string name="toast_network_lost">You have been disconnected from the group.</string>
    <string name="toast_question_empty">Please specify a question.</string>
    <string name="toast_not_enough_options">Please specify at least two options.</string>
    <string name="toast_option_empty">Please specify a text for the option.</string>
    <string name="toast_not_enough_participant_selected">Please select at least two participants.</string>
    <string name="toast_not_everybody_accepted">Not everybody has accepted the vote. Please wait for them to accept it or exclude the concerned people from the electorate.</string>
    <string name="toast_nfc_tag_read_failed">Unable to read NFC tag</string>
    <string name="toast_no_identification">Please specify your identification.</string>
    <string name="toast_network_not_found_text">Wi-Fi network \"%1$s\" not available.</string>
    <string name="toast_content_connect_failed">Connection to Wi-Fi network failed.</string>
    <string name="toast_nfc_write_success">NFC tag written successfully.</string>
    <string name="toast_file_exported">File exported under \"%1$s\".</string>
    <string name="toast_export_failed">Export failed: file not found.</string>
    <string name="dialog_title_attack_detected">Attack detected</string>
    <string name="dialog_attack_impersonalization">An attack has been detected! Someone is trying to impersonate a group member in order to be able to vote in his name. We strongly recommend to interrupt the vote period and restart.</string>
    <string name="dialog_attack_different_senders">An attack has been detected! Someone has sent a message on behalf of another member of the group. We strongly recommand to interrupt the vote period and restart.</string>
    <string name="dialog_attack_different_salts">An attack has been detected! Someone is blocking the vote. Create a new group and give the password only to people allowed to vote.</string>
    <string name="dialog_not_included_title">Not allowed to vote</string>
    <string name="dialog_not_included">You were not included in the electorate. You are not allowed to vote.</string>
    <string name="dialog_title_network_lost">Group connection lost</string>
    <string name="dialog_network_lost">The group connection has been lost. You will not be able to vote.</string>
    <string name="dialog_title_wrong_key">Wrong group password</string>
    <string name="dialog_wrong_key_pwd">You probably entered a wrong group password. Please double check the password with another group member. If they do not match, go back and try to reconnect to the group. If they match, there is probably an attacker on the network</string>
    <string name="dialog_nfc_write_failed">NFC tag write failed</string>
    <string name="dialog_nfc_readonly">This NFC tag is read only.</string>
    <string name="dialog_nfc_not_enough_space">This NFC tag does not have enough free space.</string>
    <string name="dialog_nfc_unable_format_ndef">Unable to format NFC tag to NDEF.</string>
    <string name="dialog_nfc_no_ndef_support">This NFC tag does not appear to support NDEF format.</string>
    <string name="dialog_title_result_chart">Result chart</string>
    <string name="dialog_title_result_not_shown">Result not shown</string>
    <string name="dialog_result_not_shown">There were less than three voters. In order to keep the vote secrecy, the result is not shown.</string>
    <string name="dialog_title_result_not_computed">Result not computed</string>
    <string name="dialog_result_not_computed">The application was not able to compute the result. We apologize for the inconvenience this may cause.</string>
    <string name="dialog_title_poll_canceled">Vote cancelled</string>
    <string name="dialog_poll_canceled">The administrator has canceled the vote. You will be redirected to the main screen.</string>
    <string name="overlay_close">Touch the screen to close this help</string>
    <string name="overlay_identification">Put your identification here&#8230;</string>
    <string name="overlay_network_option">&#8230; then choose a method to join the voting session.</string>
    <string name="overlay_review">Check the content&#8230;</string>
    <string name="overlay_review_ok">&#8230; and check the box if you agree with it.</string>
    <string name="overlay_previous_screen">Use this button to return to the previous screen.</string>
    <string name="subtitle_welcome">Welcome to MobiVote</string>
    <string name="subtitle_edition">KSRH12 Edition</string>
    <string name="hint_group_name">Group number</string>
    <string name="hint_group_password">Group password</string>
    <string name="hint_network_wlan_key">Wi-Fi key</string>
    <string name="hint_enter_question">Enter the question of the vote here</string>
    <string name="hint_enter_option">Enter the option here</string>
    <string name="description_network">Network</string>
    <string name="description_add_option">Add option</string>
    <string name="description_qrcode">QR-code</string>
</resources>