<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textview_question"
        style="?android:attr/listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/question" />

    <EditText
        android:id="@+id/edittext_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_enter_question"
        android:inputType="textMultiLine|textCapSentences" >

        <requestFocus />
    </EditText>

    <CheckBox
        android:id="@+id/checkbox_emptyvote"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="6dp"
        android:gravity="center_vertical" />

    <TextView
        android:id="@+id/textview_options"
        style="?android:attr/listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/options" />

    <ListView
        android:id="@+id/listview_pollquestions"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1" >
    </ListView>
    
    <TextView
        android:id="@+id/textview_empty"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/no_options"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="italic" />

    <LinearLayout
        android:id="@+id/footer"
        style="?android:attr/buttonBarStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/edittext_option"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="top"
            android:hint="@string/hint_enter_option"
            android:inputType="textCapSentences" />

        <ImageButton
            android:id="@+id/button_addoption"
            style="@style/BorderLessButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/description_add_option"
            android:src="@drawable/ic_action_new_dark"
            android:text="@string/add" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_bottom_bar"
        style="@style/ActionBar.Solid.Votebartheme"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:divider="?android:dividerVertical"
        android:dividerPadding="8dp"
        android:orientation="horizontal"
        android:showDividers="middle" >

        <Button
            android:id="@+id/button_start_poll"
            style="@style/BottomBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.18"
            android:drawableLeft="@drawable/ic_action_play"
            android:singleLine="true"
            android:paddingLeft="8dp"
            android:paddingRight="16dp"
            android:text="@string/action_start_poll" />
    </LinearLayout>

</LinearLayout>