<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <ImageView
        android:id="@+id/imageview_icon"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_margin="8dp"
        android:background="@color/network"
        android:contentDescription="@string/description_network"
        android:scaleType="center"
        android:src="@drawable/glyphicons_032_wifi_alt" >
    </ImageView>

    <LinearLayout
        android:id="@+id/message_row_vertical_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textview_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="14sp"
            android:textStyle="italic" >
        </TextView>

        <TextView
            android:id="@+id/textview_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/content"
            android:textSize="20sp" >
        </TextView>
    </LinearLayout>

</LinearLayout>